src/test/Nullability/Nullability.expected
error: Nullability.panda:14:23: cannot use possibly-null value as non-nullable type panda.core.String
error: Nullability.panda:15:19: cannot use possibly-null value as non-nullable type panda.core.String
error: Nullability.panda:16:19: cannot use possibly-null value as non-nullable type panda.core.String
3 errors
