src/test/Nullability/Nullability.panda
method nullableString():String? {
    if Random.bit()
        return "string!"
    else
        return null
}

var s := nullableString()
if s != null
    Console.writeLine(s)
if s != null & s.length > 0
    Console.writeLine(s)
if s != null | (s != null & s.length > 0)
    Console.writeLine(s) -- FIXME TEST ERROR: shouldn't be getting an error here
Console.writeLine(s)
Console.writeLine(s.length)

s := nullableString()
assert s != null
Console.writeLine(s)